--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </div>
 
 <div class="info">
+    <h1>Some random information.</h1>
 <img>
 <p>this is some subtext under an illustration image</p>
 <img>
