--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 </head>
 
 <body>
-
+  
 <div class="header">
 <h4>Header Logo</h4>
+<div class="headerlinks">
 <ul>
     <li>header link one</li>
     <li>header link two</li>
     <li>header link three</li>
+</div>
 </ul>
 </div>
-
+<div class="subtext0">
 <div class="subtext">
 <h1>This website is awesome</h1>
 <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
 <button>Sign up</button>
+</div>
+<img src="/home/luciano/Pictures/Wallpapers/blueandgoldluciano.png" alt="This is a placeholder for an image" style="width: 500px;">
 </div>
 
 <div class="info">
