Add images and image borders, format CSS for info section, change text elements in info section

--- a/index.html
+++ b/index.html
@@ -25,19 +25,29 @@
 <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
 <button>Sign up</button>
 </div>
-<img src="/home/luciano/Pictures/Wallpapers/blueandgoldluciano.png" alt="This is a placeholder for an image" style="width: 500px;">
+<img border="4" src="/home/luciano/Pictures/Wallpapers/blueandgoldluciano.png" alt="This is a placeholder for an image" style="width: 500px;">
 </div>
 
 <div class="info">
     <h1>Some random information.</h1>
-<img>
-<p>this is some subtext under an illustration image</p>
-<img>
-<p>this is some subtext under an illustration image</p>
-<img>
-<p>this is some subtext under an illustration image</p>
-<img>
-<p>this is some subtext under an illustration image</p>
+ <div class="collage">
+<div class="collage1">
+<img border="4" src="/home/luciano/Pictures/ashamed.jpg" style="width:150px;">
+<p>Più beviamo</p>
+</div>
+<div class="collage2">
+<img border="4" src="/home/luciano/Pictures/ashamed.jpg" style="width:150px;">
+<p>tanto più assetato</p>
+</div>
+<div class="collage3">
+<img border="4"src="/home/luciano/Pictures/ashamed.jpg" style="width:150px;">
+<p>diventiamo.</p>
+</div>
+<div class="collage4">
+<img border="4" src="/home/luciano/Pictures/ashamed.jpg" style="width:150px;">
+<p>- Arthur Schopenhauer</p>
+</div>
+</div>
 </div>
 
 <div class="quote">
