--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 <body>
   
 <div class="header">
-<h4>Header Logo</h4>
+<h4>The Header on His Throne</h4>
 <div class="headerlinks">
 <ul>
-    <li>header link one</li>
-    <li>header link two</li>
-    <li>header link three</li>
+    <li>Numero Uno</li>
+    <li>Numero Due</li>
+    <li>Numero Tre</li>
 </div>
 </ul>
 </div>
+<div class="subtextbg">
 <div class="subtext0">
 <div class="subtext">
-<h1>This website is awesome</h1>
-<p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
+<h1>Landing Page</h1>
+<p>The final Odin Project before JavaScript in the foundations section.</p>
 <button>Sign up</button>
 </div>
 <img border="4" src="/home/luciano/Pictures/Wallpapers/blueandgoldluciano.png" alt="This is a placeholder for an image" style="width: 500px;">
 </div>
-
+</div>
 <div class="info">
     <h1>Some random information.</h1>
  <div class="collage">
@@ -59,11 +60,15 @@
 
 <div class="action">
 <div class="signup">
+<div class="call">
 <h3>Call to action! It's time!</h3>
 <p>Sign up for our product by clicking that button right over there!</p>
+</div>
 <button>Sign up</button>
 </div>
 </div>
+
+
 <div class="footer">
 <p>Copyright @ The Odin Project 2021</p>
 </div>
